<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017 escoand.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_title">%app_title%</string>
    <string name="app_subtitle"></string>

    <string name="toolbar_title">%app_title%</string>
    <string name="toolbar_subtitle">dd.MM.YYYY</string>

    <string name="navigation_today">Heute</string>
    <string name="navigation_calendar">Kalender</string>
    <string name="navigation_intro">Einleitungen</string>
    <string name="navigation_voty">Jahreslosung</string>
    <string name="navigation_list">Liste</string>
    <string name="navigation_store">Store</string>
    <string name="navigation_other">Sonstiges</string>
    <string name="navigation_reminder">Erninnerung</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="navigation_about">Über</string>

    <string name="navigation_share">Teilen</string>
    <string name="navigation_bible">Onlinebibel</string>

    <string name="about_version">Version %s</string>
    <string name="about_copyright">Copyright © 2016 escoand</string>
    <string name="about_recommend">Weiterempfehlen</string>
    <string name="about_tickets">Fehler oder Verbesserungswünsche melden</string>
    <string name="about_libraries">Lizenzen</string>

    <string name="button_ok">OK</string>
    <string name="button_close">Schließen</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_reload">Wiederholen</string>
    <string name="button_error">Fehler</string>
    <string name="button_download">Laden</string>
    <string name="button_purchase">Kaufen</string>
    <string name="button_remove">Entfernen</string>
    <string name="button_bible">Bibel lesen</string>

    <string name="type_voty">Jahreslosung</string>
    <string name="type_votm">Monatslosung</string>
    <string name="type_votw">Wochenlosung</string>
    <string name="type_votd">Tagestext</string>

    <string name="message_nodata">Es konnte kein Text für dieses\nDatum gefunden werden.\nWähle ein anderes Datum oder\nklicke auf den Button, um mehr zu laden.</string>
    <string name="message_recommend_subject">App-Empfehlung für dich</string>
    <string name="message_recommend">Ich möchte dir die folgende App empfehlen.\nProbier sie doch mal aus.\nhttps://play.google.com/store/apps/details?id=</string>
    <string name="message_reminder">Tägliche Bibellese nicht vergessen!</string>
    <string name="message_push_register">Registrierung</string>
    <string name="message_download_list">Fehler beim Laden der Liste.\nInternetverbindung prüfen.</string>
    <string name="message_download_open">Fehler beim Öffnen des Downloads.</string>
    <string name="message_download_read">Fehler beim Verarbeiten des Downloads.</string>
    <string name="message_download_xml">Fehler beim Verarbeiten des XML-Downloads.</string>

    <string name="license_key"></string>
    <string name="merchant_id"></string>
    <string name="product_list_url"></string>
    <string name="product_img_url"></string>
    <string name="product_data_url"></string>
    <string name="push_register_url"></string>
    <string name="push_unregister_url"></string>

    <string name="url_bible">http://www.bibleserver.com/text/</string>
    <string name="url_tickets">https://github.com/escoand/dailyread/issues</string>

    <!--  settings -->
    <string name="pref_group_display">Anzeige</string>
    <string name="pref_group_other">Sonstiges</string>
    <string name="pref_font">Schriftart</string>
    <string name="pref_font_desc"></string>
    <string name="pref_readability">Hoher Kontrast</string>
    <string name="pref_readability_desc">erhöhte Lesbarkeit durch kräftigere Farben</string>
    <string name="pref_translation">Bibelübersetzung</string>
    <string name="pref_translation_desc">Übersetzung der Onlinebibel</string>
    <string name="pref_notification">Benachrichtigung</string>
    <string name="pref_notification_desc">erhalte gelegentlich Informationen über Neuigkeiten zur App</string>

    <!-- settings values -->
    <string-array name="bible_translations">
        <item>Hoffnung für alle</item>
        <item>Luther</item>
        <item>Gute Nachricht</item>
    </string-array>
    <string-array name="bible_translation_values">
        <item>HFA</item>
        <item>LUT</item>
        <item>GNB</item>
    </string-array>
    <string name="bible_translation_default">LUT</string>

</resources>
