<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016  escoand
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/navigation_today"
            android:icon="@drawable/drawer_today"
            android:title="@string/navigation_today" />

        <item
            android:id="@+id/navigation_calendar"
            android:icon="@drawable/drawer_calendar"
            android:title="@string/navigation_calendar" />

        <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/drawer_list"
            android:title="@string/navigation_list" />

        <item
            android:id="@+id/navigation_store"
            android:icon="@drawable/drawer_store"
            android:title="@string/navigation_store" />

        <item android:title="@string/navigation_other">

            <menu>

                <group>

                    <item
                        android:id="@+id/navigation_settings"
                        android:icon="@drawable/drawer_settings"
                        android:title="@string/navigation_settings" />

                    <item
                        android:id="@+id/navigation_about"
                        android:icon="@drawable/drawer_about"
                        android:title="@string/navigation_about" />

                </group>

            </menu>

        </item>

    </group>

</menu>
