<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 escoand.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/bible_translation_default"
        android:entries="@array/bible_translations"
        android:entryValues="@array/bible_translation_values"
        android:key="bible_translation"
        android:title="@string/pref_translation" />

    <SwitchPreference
        android:id="@+id/preference_notification"
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/pref_notification" />

</PreferenceScreen>